force-app/main/default/objects/Position__c/fields/DBMS__c.field-meta.xml
<CustomField>
    <fullName>DBMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DBMS</label>
    <type>Checkbox</type>
</CustomField>