force-app/main/default/objects/Position__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <formula>ISPICKVAL(Status__c, &quot;Closed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsClosed</label>
    <type>Checkbox</type>
</CustomField>