force-app/main/default/objects/Position__c/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <label>Job Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Functional_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FN-01</fullName>
            </value>
            <value>
                <fullName>FN-02</fullName>
            </value>
            <value>
                <fullName>HR-01</fullName>
            </value>
            <value>
                <fullName>HR-02</fullName>
            </value>
            <value>
                <fullName>IT-01</fullName>
            </value>
            <value>
                <fullName>IT-02</fullName>
            </value>
            <value>
                <fullName>RO-01</fullName>
            </value>
            <value>
                <fullName>RO-02</fullName>
            </value>
            <value>
                <fullName>W-01</fullName>
            </value>
            <value>
                <fullName>W-02</fullName>
            </value>
            <value>
                <fullName>M-01</fullName>
            </value>
            <value>
                <fullName>M-02</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>