force-app/main/default/objects/Position__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Noida, UP</fullName>
                <default>true</default>
                <label>Noida, UP</label>
            </value>
            <value>
                <fullName>Bangalore, Karnataka</fullName>
            </value>
            <value>
                <fullName>Gurgaon, Haryana</fullName>
            </value>
            <value>
                <fullName>Chennai, Tamilnadu</fullName>
            </value>
            <value>
                <fullName>Kathmandu, Nepal</fullName>
            </value>
            <value>
                <fullName>Tampa Bay , Florida , USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>