force-app/main/default/objects/Position__c/fields/Maximum_Pay__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Pay__c</fullName>
    <label>Maximum Pay</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>