force-app/main/default/objects/Position__c/fields/No_of_Openings__c.field-meta.xml
<CustomField>
    <fullName>No_of_Openings__c</fullName>
    <defaultValue>1</defaultValue>
    <label>No. of Openings</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>