force-app/main/default/objects/Position__c/recordTypes/Closed_Position.recordType-meta.xml
<RecordType>
    <fullName>Closed_Position</fullName>
    <active>true</active>
    <label>Closed Position</label>
</RecordType>