force-app/main/default/objects/Position__c/validationRules/MinimumPayShouldNotBeGreaterThanMaximumP.validationRule-meta.xml
<ValidationRule>
    <fullName>MinimumPayShouldNotBeGreaterThanMaximumP</fullName>
    <active>true</active>
    <errorConditionFormula>Minimum_Pay__c&gt;Maximum_Pay__c</errorConditionFormula>
    <errorMessage>Minimum Pay Should not be greater than Maximum Pay</errorMessage>
</ValidationRule>