force-app/main/default/objects/Position__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Close_Date__c</columns>
    <columns>No_of_Openings__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>